--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -3,6 +3,7 @@
   <div class="row">
     <div class="col">
       <button type="button" class="btn btn-outline-dark btn-block" (click)="login()">Login</button>
+      <button type="button" class="btn btn-outline-dark btn-block" (click)="register()">register</button>
     </div>
 </div>
 <hr>
