--- a/front/src/app/components/user/login/login.component.html
+++ b/front/src/app/components/user/login/login.component.html
@@ -1,8 +1,16 @@
-<h3>Login</h3>
+<h3 class="text-light">Login</h3>
 <p class="text-muted">Rellena con tus datos</p><hr>
-<form #formulario="ngForm" (ngSubmit)="enviar(formulario.form)">
-  <input placeholder="E-mail" name="mail" type="text" class="form-control" ngModel required><br>
-  <input placeholder="Contraseña" name="password" type="password" class="form-control" ngModel required><br>
-  <button class="btn btn-outline-dark btn-block" type="submit">Enviar</button>
+<form #formulario="ngForm" (ngSubmit)="enviar(formulario.form) " class="form-inline" >
+  <div class="form-group mx-sm-3 mb-2">
+  <input placeholder="E-mail" name="mail" type="text" class="form-control" ngModel required>
+  </div>
+  <div class="form-group mx-sm-3 mb-2">
+  <input placeholder="Contraseña" name="password" type="password" class="form-control" ngModel required>
+  </div>
+  <div class="form-group mx-sm-3 mb-2">
+  <button class="btn btn-outline-light rounded-pill-lg" type="submit">Enviar</button>
+  </div> 
 </form>
-
+<p *ngFor="let alert of alerts">
+    <ngb-alert [type]="alert.type" (close)="close(alert)">{{ alert.message }}</ngb-alert>
+</p>
