--- a/front/src/app/components/user/profile/profile.component.html
+++ b/front/src/app/components/user/profile/profile.component.html
@@ -1,29 +1,64 @@
-<h3>Book Searcher</h3>
+<h3 class="text-light">Book Searcher</h3>
 <p class="text-muted">fill any of these parameter to get a book</p>
 <hr>
 
-<form #Form="ngForm" (ngSubmit)="title(Form)">
-    <input class="form-group" type="text" class="form-control" id="title" placeholder="title" [(ngModel)]="book.title" name="title">
-  <button type="submit" class="btn btn-success">Search</button>
+<form #F="ngForm" class="form-inline">
+  <input type="text" class="form-control" placeholder="Search" name=data  ngModel>
+  <div class="row">
+    <div class="col">
+      <div ngbDropdown class="d-inline-block">
+        <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>Searching parameter</button>
+        <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+          <button (click)="title(F.form)" ngbDropdownItem>Title</button>
+          <button (click)="ISBN(F.form)" ngbDropdownItem>ISBN</button>
+          <button (click)="author(F.form)" ngbDropdownItem>Author</button>
+          <button (click)="price(F.form)" ngbDropdownItem>Price</button>
+          <button (click)="date(F.form)" ngbDropdownItem>Date</button>
+        </div>
+      </div>
+    </div>
+  </div>
 </form>
+<p *ngFor="let alert of alerts">
+    <ngb-alert [type]="alert.type" (close)="close(alert)">{{ alert.message }}</ngb-alert>
+</p>
 <br>
-<form #Form2="ngForm" (ngSubmit)="ISBN(Form2)">
-    <input class="form-group" type="text" class="form-control" id="ISBN" placeholder="ISBN" [(ngModel)]="book.ISBN" name="ISBN">
-  <button type="submit" class="btn btn-success">Search</button>
-</form>
-<br>
-<form #Form3="ngForm" (ngSubmit)="author(Form3)">
-    <input class="form-group" type="text" class="form-control" id="author" placeholder="author" [(ngModel)]="book.author" name="author">
-  <button type="submit" class="btn btn-success">Search</button>
-</form>
-<br>
-<form #Form4="ngForm" (ngSubmit)="price(Form5)">
-    <input class="form-group" type="text" class="form-control" id="price" placeholder="price" [(ngModel)]="book.price" name="price">
-  <button type="submit" class="btn btn-success">Search</button>
-</form>
-<br>
-<form #Form5="ngForm" (ngSubmit)="date(Form5)">
-    <input class="form-group" type="text" class="form-control" id="date" placeholder="date" [(ngModel)]="book.date" name="date">
-  <button type="submit" class="btn btn-success">Search</button>
-</form>
-<br>
+
+<table class="table table-striped table-dark">
+  <tbody>
+    <tr>
+      <th scope="col">Title</th>
+      <td>{{book.title}}</td>
+    </tr>
+  
+    <tr>
+      <th scope="row">ISBN</th>
+      <td>{{book.ISBN}}</td>
+    </tr>
+    <tr>
+      <th scope="row">Author</th>
+      <td>{{book.author}}</td>
+    </tr>
+    <tr>
+      <th scope="row">Price</th>
+      <td>{{book.price}}</td>
+    </tr>
+    <tr>
+      <th scope="row">Publisher</th>
+      <td>{{book.publisher}}</td>
+    </tr>
+    <tr>
+      <th scope="row">Date</th>
+      <td>{{book.date}}</td>
+    </tr>
+    <tr>
+      <th scope="row">Description</th>
+      <td>{{book.description}}</td>
+    </tr>
+  </tbody>
+</table>
+
+
+
+
+
