--- a/front/src/app/components/user/register/register.component.html
+++ b/front/src/app/components/user/register/register.component.html
@@ -1,10 +1,13 @@
-<h3>Register</h3>
+<h3 class="text-light">Register</h3>
 <p class="text-muted">Rellena con tus datos</p><hr>
 <form #formulario="ngForm" (ngSubmit)="registrar(formulario.form)">
-  <input placeholder="name" name="name" type="text" class="form-control" ngModel required><br>
-  <input placeholder="surname" name="surname" type="text" class="form-control" ngModel required><br>
+  <input placeholder="Name" name="name" type="text" class="form-control" ngModel required><br>
+  <input placeholder="Surname" name="surname" type="text" class="form-control" ngModel required><br>
   <input placeholder="E-mail" name="mail" type="text" class="form-control" ngModel required><br>
-  <input placeholder="phone" name="phone" type="text" class="form-control" ngModel required><br>
-  <input placeholder="password" name="password" type="password" class="form-control" ngModel required><br>
-  <button class="btn btn-outline-dark btn-block" type="submit">Enviar</button>
+  <input placeholder="Phone" name="phone" type="text" class="form-control" ngModel required><br>
+  <input placeholder="Password" name="password" type="password" class="form-control" ngModel required><br>
+  <button class="btn btn-outline-light btn-block" type="submit">Enviar</button>
 </form>
+<p *ngFor="let alert of alerts">
+    <ngb-alert [type]="alert.type" (close)="close(alert)">{{ alert.message }}</ngb-alert>
+</p>
