--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,6 +1,6 @@
 
 <nav class="navbar navbar-expand-md bg-dark navbar-dark ">
-    <a class="navbar-brand" href="#">Front</a>
+    <a class="navbar-brand text-light" (click)="home()">Front</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse"
       aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -16,6 +16,7 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <a class="dropdown-item" (click)="login()">Login</a>
                   <a class="dropdown-item" (click)="register()">Register</a>
+                  <a class="dropdown-item" (click)="profile()">Profile</a>
                 </div>
                 <div>
               </div>
