--- a/front/src/app/components/user/profile/profile.component.html
+++ b/front/src/app/components/user/profile/profile.component.html
@@ -1,64 +1,24 @@
-<h3 class="text-light">Book Searcher</h3>
-<p class="text-muted">fill any of these parameter to get a book</p>
-<hr>
-
-<form #F="ngForm" class="form-inline">
-  <input type="text" class="form-control" placeholder="Search" name=data  ngModel>
-  <div class="row">
-    <div class="col">
-      <div ngbDropdown class="d-inline-block">
-        <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>Searching parameter</button>
-        <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-          <button (click)="title(F.form)" ngbDropdownItem>Title</button>
-          <button (click)="ISBN(F.form)" ngbDropdownItem>ISBN</button>
-          <button (click)="author(F.form)" ngbDropdownItem>Author</button>
-          <button (click)="price(F.form)" ngbDropdownItem>Price</button>
-          <button (click)="date(F.form)" ngbDropdownItem>Date</button>
-        </div>
-      </div>
-    </div>
-  </div>
-</form>
-<p *ngFor="let alert of alerts">
-    <ngb-alert [type]="alert.type" (close)="close(alert)">{{ alert.message }}</ngb-alert>
-</p>
-<br>
-
+ 
 <table class="table table-striped table-dark">
-  <tbody>
-    <tr>
-      <th scope="col">Title</th>
-      <td>{{book.title}}</td>
-    </tr>
+    <tbody>
+      <tr>
+        <th scope="col">Name</th>
+        <td>{{profile.name}}</td>
+      </tr>
+    
+      <tr>
+        <th scope="row">Surname</th>
+        <td>{{profile.surname}}</td>
+      </tr>
+      <tr>
+        <th scope="row">Mail</th>
+        <td>{{profile.mail}}</td>
+      </tr>
+      <tr>
+        <th scope="row">Phone</th>
+        <td>{{profile.phone}}</td>
+      </tr>
+      <tr>
+    </tbody>
+  </table>
   
-    <tr>
-      <th scope="row">ISBN</th>
-      <td>{{book.ISBN}}</td>
-    </tr>
-    <tr>
-      <th scope="row">Author</th>
-      <td>{{book.author}}</td>
-    </tr>
-    <tr>
-      <th scope="row">Price</th>
-      <td>{{book.price}}</td>
-    </tr>
-    <tr>
-      <th scope="row">Publisher</th>
-      <td>{{book.publisher}}</td>
-    </tr>
-    <tr>
-      <th scope="row">Date</th>
-      <td>{{book.date}}</td>
-    </tr>
-    <tr>
-      <th scope="row">Description</th>
-      <td>{{book.description}}</td>
-    </tr>
-  </tbody>
-</table>
-
-
-
-
-
